--- a/src/scss/global-styles/_header.scss
+++ b/src/scss/global-styles/_header.scss
@@ -5,7 +5,7 @@
     .close-sidebar-btn{
         width: 30px;
         height: 30px;
-        background: #76101a url(../../images/cancel-music.svg) center/100% no-repeat;
+        background: #76101a url(../images/cancel-music.svg) center/100% no-repeat;
         border: none;
         position: absolute;
         top: -65px;
@@ -30,7 +30,7 @@
         width: 156px;
         height: 128px;
         top: -11px;
-        background: url(/src/images/cancel-music.svg) center 19px/90px no-repeat #ec2033;
+        background: url(../../images/header-logo.svg) center 19px/90px no-repeat #ec2033;
         display: block;
         
         border-radius: 50%;
